# jarvis

./: .env.example  .gitignore  =4.52.1  Makefile  README.md  pyproject.toml
.claude/: settings.json
docs/superpowers/plans/: 2026-04-23-jarvis-full-revision.md
docs/superpowers/specs/: 2026-04-23-jarvis-full-revision-design.md
jarvis/: __init__.py  __main__.py  agent.py  audio.py  config.py  llm.py  main.py  memory.py  personality.py  streaming.py  stt.py  telegram_bot.py  tools.py  tts.py  wake.py  watch.py
jarvis/core/: config.py  personality.py  session.py
jarvis/graph/: agent.py  nodes.py  state.py
jarvis/graph/proactive/: calendar.py  email.py  watchdog.py
jarvis/integrations/: google_auth.py
jarvis/memory/: mem0_store.py
jarvis/tools/: calendar_tools.py  coding.py  email_tools.py  registry.py  web_tools.py
jarvis/voice/: audio.py  csm_generator.py  streaming.py  stt.py  tts.py  wake.py
scripts/: download_voice.sh  serve_vllm.sh  wait_for_vllm.sh
tests/: test_agent_streaming.py  test_core_config.py  test_core_personality.py  test_core_session.py  test_graph_nodes.py  test_main_cli.py  test_memory.py  test_memory_mem0_store.py  test_proactive_monitors.py  test_streaming_pipeline.py  test_tools_google.py  test_tools_registry.py  test_tools_safety.py  test_voice_tts.py
