[project]
name = "jarvis"
version = "0.2.0"
description = "Proactive personal AI. LangGraph + mem0 + Claude API. Voice-first, Iron Man style."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rui Machado" }]

dependencies = [
    # LLM + orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # Memory
    "mem0ai>=0.1.0",
    "chromadb>=0.5.0",
    # Google integrations
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.130.0",
    # Web tools
    "trafilatura>=1.12.0",
    "duckduckgo-search>=6.0.0",
    # Voice
    "faster-whisper>=1.0.3",
    "kokoro-onnx>=0.4.0",
    "sounddevice>=0.4.7",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "webrtcvad>=2.0.10",
    # Telegram + CLI
    "python-telegram-bot>=21.4",
    "typer>=0.12.3",
    "rich>=13.7.1",
    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    # Async + utils
    "anyio>=4.4.0",
    "watchfiles>=0.22.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
wake = [
    "openwakeword>=0.6.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
]

[project.scripts]
jarvis = "jarvis.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
